# notenheim2

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
backend/: Cargo.toml
backend-common/: Cargo.toml
backend-common/src/: lib.rs
backend-macros/: Cargo.toml
backend-macros/src/: lib.rs
backend/src/: main.rs  state.rs
commands/: Cargo.toml
commands/src/: lib.rs
common/src/: lib.rs
frontend/: Cargo.toml
frontend-common/: Cargo.toml
frontend-common/src/: lib.rs
frontend-macros/: Cargo.toml
frontend-macros/src/: lib.rs
frontend/src/: main.rs
frontend/src/components/: app.rs
frontend/src/hooks/: backend.rs
macros/src/: lib.rs
