[package]
name = "frontend-common"
version = "0.1.0"
edition = "2021"

[dependencies]
commands = { path = "../commands" }
frontend-macros = { path = "../frontend-macros" }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Headers", "Request", "RequestInit", "Response", "Window"] }
